--- a/templates/index.html
+++ b/templates/index.html
@@ -351,7 +351,7 @@
         <div class="text-white text-xl font-semibold text-center mb-2">Visualizer</div>
         <div class="mb-4 text-white flex items-center gap-4 justify-center text-2xl">
           <button id="prevVisualizerBtn" class="hover:text-gray-400 transition" aria-label="Previous Visualizer">&#9664;</button>
-          <span class="text-sm" id="currentVisualizerName">Visualizer 1</span>
+          <span class="text-sm" id="currentVisualizerName"></span>
           <button id="nextVisualizerBtn" class="hover:text-gray-400 transition" aria-label="Next Visualizer">&#9654;</button>
         </div>
 
