--- a/templates/index.html
+++ b/templates/index.html
@@ -365,10 +365,10 @@
         <!-- Track metadata -->
         <p id="title"  class="mb-4 text-4xl font-bold text-white break-words text-center">—</p>
         <p id="artist" class="mb-2 text-2xl text-white break-words text-center">—</p>
-        <p id="album"  class="mb-2 text-2xl text-white break-words text-center">—</p>
+        <p id="album"  class="mb-6 text-2xl text-white break-words text-center">—</p>
 
         <!-- Progress bar -->
-        <div class="w-full h-2 bg-white/30 rounded-full overflow-hidden mb-2">
+        <div class="w-full h-2 bg-white/30 rounded-full overflow-hidden ">
           <div id="progressBar" class="h-full bg-white transition-all duration-300" style="width: 0%;"></div>
         </div>
 
