--- a/templates/index.html
+++ b/templates/index.html
@@ -367,11 +367,12 @@
            class="flex flex-col justify-center text-left w-full fade-transition
                   backdrop-blur-[100px] backdrop-saturate-150 bg-white/20 rounded-[30px] shadow-xl"
            style="max-width: var(--metadata-max-width); padding: var(--metadata-padding);">
-        <div class="flex justify-end">
-          <button id="settingsBtn" class="text-white text-3xl hover:opacity-70 transition" aria-label="Settings">
-            ⚙
-          </button>
-        </div>
+        <div class="flex justify-between">
+<div id="versionLabel" class="text-white text ">spezi {{ version }}</div>
+            <button id="settingsBtn" class="text-white text-3xl hover:opacity-70 transition" aria-label="Settings">
+    ⚙
+  </button>
+</div>
 
 
         <!-- Track metadata -->
